# moos-ros-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  moos_setup_script.sh
catkin_ws/src/mr_bridge/: moos_run.sh
catkin_ws/src/mr_bridge/tester/launch/: example.launch  example_w_sim.launch
catkin_ws/src/mr_bridge/tester/scripts/: example.sh
catkin_ws/src/posestamped_to_stdmsgs/launch/: transform.launch
config/: bridge.moos  lab_18.xml  ros_ctrl_waypt.xml  s1_alpha_toROS.xml  vrx_moos_ros.xml
docker/: Dockerfile  docker_build.sh  docker_join.sh  docker_stop.sh
launch/: lab_18.launch  ros_ctrl_waypt.launch  s1_alpha_toUnity.launch  vrx_moos_ros_classification.launch  vrx_moos_ros_station_keep.launch  vrx_moos_ros_way_point.launch
moosros/moos/example/: bridge.moos
moosros_tester/launch/: example.launch
scripts/: counter.sh
src/: Bridge.cpp  MOOSNode.cpp  counter.cpp
src/ROS_Manual_WPT/: CMakeLists.txt  RMW_Info.cpp  RMW_Info.h  RMW_MOOSApp.cpp  RMW_MOOSApp.h  main.cpp
